# dsmonitor

./: .gitignore  README.md  pyproject.toml  run_tftp_monitor.py
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-29-baseline-first-sync.md  2026-05-29-multi-source-monitor.md  2026-05-29-tftp-monitor-app.md
docs/superpowers/specs/: 2026-05-29-baseline-first-sync-design.md  2026-05-29-multi-source-monitor-design.md  2026-05-29-tftp-monitor-design.md
scripts/: build_exe.ps1
src/tftp_monitor/: __init__.py  app.py  gui.py  manifest_store.py  models.py  pathing.py  proxy_credentials.py  proxy_tunnel.py  settings_store.py  ssh_sync.py  sync_logic.py
tests/: test_app.py  test_gui.py  test_manifest_store.py  test_package_smoke.py  test_pathing.py  test_readme.py  test_ssh_sync.py  test_sync_logic.py
