[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tftp-monitor"
version = "0.1.0"
description = "Desktop monitor for mirroring a remote source tree over SSH/SFTP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "PySide6>=6.9,<7",
  "paramiko>=3.5,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
tftp-monitor = "tftp_monitor.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
